Fri Sep 17 07:51:44 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * *.cdp:
          Added Id string to all cdp files.

Fri Sep 17 07:11:39 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * tests/CIF/descriptors/Plan.cdp:
          Added ID string

Thu Sep 16 13:57:26 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * tests/CIF/Component/CIF_Component.idl:
        * tests/CIF/Navigation/client.cpp:
        * tests/CIF/Receptacle/client.cpp:
          Renamed some interfaces.

Thu Sep 16 12:18:01 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * tests/CIF/Component/CIF_Component.idl:
        * tests/CIF/descriptors/Plan.cdp:
          Implemented a Home for the CIF_User component. The test error should
          be gone.

        * tests/CIF/Receptacle/client.cpp:
          Improved logging.

Thu Sep 16 11:06:09 UTC 2010  Marijke Hengstmengel  <mhengstmengel@remedy.nl>

       * connectors/ami4ccm/tests/ThreeComp/Sender/ThreeComp_Sender_exec.cpp:
       * bin/ciao_tests.lst:
       Add ThreeComp test to test suite.

Thu Sep 16 10:03:09 UTC 2010  Marijke Hengstmengel  <mhengstmengel@remedy.nl>

        * connectors/ami4ccm/tests/ThreeComp:
        * connectors/ami4ccm/tests/ThreeComp/Sender:
        * connectors/ami4ccm/tests/ThreeComp/Sender/ThreeComp_Sender_exec.h:
        * connectors/ami4ccm/tests/ThreeComp/Sender/ThreeComp_Sender.mpc:
        * connectors/ami4ccm/tests/ThreeComp/Sender/ThreeComp_Sender_exec.cpp:
        * connectors/ami4ccm/tests/ThreeComp/Sender/ThreeComp_Sender.idl:
        * connectors/ami4ccm/tests/ThreeComp/descriptors:
        * connectors/ami4ccm/tests/ThreeComp/descriptors/Plan.cdp:
        * connectors/ami4ccm/tests/ThreeComp/descriptors/run_test.pl:
        * connectors/ami4ccm/tests/ThreeComp/Receiver:
        * connectors/ami4ccm/tests/ThreeComp/Receiver/ThreeComp_Receiver_exec.cpp:
        * connectors/ami4ccm/tests/ThreeComp/Receiver/ThreeComp_Receiver.idl: