@@ -46,7 +46,7 @@ CIF_Common::init_provider_component (::CosNaming::NamingContext_ptr naming_conte
 {
   ::CosNaming::Name name (1);
   name.length (1);
-  name[0].id = ::CORBA::string_dup (ACE_TEXT_ALWAYS_CHAR ("ProviderComponentInstance"));
+  name[0].id = ::CORBA::string_dup ("ProviderComponentInstance");
 
   ::CORBA::Object_var obj_ref = naming_context->resolve (name);
 
@@ -78,7 +78,7 @@ CIF_Common::init_user_component (::CosNaming::NamingContext_ptr naming_context)
 {
   ::CosNaming::Name name (1);
   name.length (1);
-  name[0].id = ::CORBA::string_dup (ACE_TEXT ("UserComponentInstance"));
+  name[0].id = ::CORBA::string_dup ("UserComponentInstance");
 
   ::CORBA::Object_var obj_ref = naming_context->resolve (name);
 
